--- a/service/templates/index_final.html
+++ b/service/templates/index_final.html
@@ -175,7 +175,27 @@ window.onload = function() {
     var textdata = JSON.parse(localStorage.getItem("textinfor"));
     var locationInput = document.getElementById("location");
     var addressInput = document.getElementById("address");
-    if castdata.code.get == 
+    if (textdata.code.count == "CODE0"){
+        var checkboxes= document.getElementById("code0Checkbox");
+        checkboxes.checked=true;
+    }
+    if (textdata.code.count == "CODE1"){
+        var checkboxes= document.getElementById("code1Checkbox");
+        checkboxes.checked=true;
+    }
+    if (textdata.code.count == "CODE2"){
+        var checkboxes= document.getElementById("code2Checkbox");
+        checkboxes.checked=true;
+    }
+    if (textdata.code.count == "CODE3"){
+        var checkboxes= document.getElementById("code3Checkbox");
+        checkboxes.checked=true;
+    }
+    if (textdata.code.count == "CODE4"){
+        var checkboxes= document.getElementById("code4Checkbox");
+        checkboxes.checked=true;
+    }
+
     var roadaddressInput = document.getElementById("jibunAddress");
     console.log(textdata)
     var reportContentInput = document.getElementById("reportContent");
@@ -187,6 +207,5 @@ window.onload = function() {
     reportContentInput.value=textdata.text;
     
 }
-    
-    </script>
+</script>
 </html>
